# seo-agent

./: .env  .env.example  =62.0  CLAUDE.md  PRD.md  README.md  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
app/: __init__.py  models.py
app/routes/: analysis.py  main.py
app/services/: aeo_analyzer.py  aggregator.py  classifier.py  crawler.py  csv_parser.py  geo_analyzer.py  llm_client.py  orchestrator.py  priority.py  rate_limiter.py  report_generator.py  seo_analyzer.py  storage.py  structure_analyzer.py
app/static/css/: style.css
app/templates/: base.html  error.html  history.html  home.html  loading.html  results.html
data/: analyses.db
tests/: test_classifier.py  test_csv_parser.py  test_priority.py  test_structure_analyzer.py
